[Models] refactored http transfer request.
