# docs/swagger.yaml
@@ -58,13 +58,6 @@ definitions:
     - sourceAmount
     - sourceCurrency
     type: object
-  models.HTTPFiatTransferRequest:
-    properties:
-      offerId:
-        type: string
-    required:
-    - offerId
-    type: object
   models.HTTPOpenCurrencyAccountRequest:
     properties:
       currency:
@@ -77,6 +70,13 @@ definitions:
       message:
         type: string
       payload: {}
+    type: object
+  models.HTTPTransferRequest:
+    properties:
+      offerId:
+        type: string
+    required:
+    - offerId
     type: object
   models.JWTAuthResponse:
     properties:
@@ -151,6 +151,49 @@ info:
   title: FTeX, Inc. (Formerly Crypto-Bro's Bank, Inc.)
   version: 1.0.0
 paths:
+  /crypto/exchange:
+    post:
+      consumes:
+      - application/json
+      description: Purchase or sell a Cryptocurrency to/from a Fiat currency accounts.
+        The Offer ID must be valid and have expired.
+      operationId: exchangeCrypto
+      parameters:
+      - description: the two currency code and amount to be converted
+        in: body
+        name: offerID
+        required: true
+        schema:
+          $ref: '#/definitions/models.HTTPTransferRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: a message to confirm the conversion of funds
+          schema:
+            $ref: '#/definitions/models.HTTPSuccess'
+        "400":
+          description: error message with any available details in payload
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+        "403":
+          description: error message with any available details in payload
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+        "408":
+          description: error message with any available details in payload
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+        "500":
+          description: error message with any available details in payload
+          schema:
+            $ref: '#/definitions/models.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: Transfer funds between Fiat and Crypto accounts using a valid Offer
+        ID.
+      tags:
+      - crypto fiat currency cryptocurrency exchange convert offer transfer execute
   /crypto/offer:
     post:
       consumes:
@@ -320,7 +363,7 @@ paths:
         name: offerID
         required: true
         schema:
-          $ref: '#/definitions/models.HTTPFiatTransferRequest'
+          $ref: '#/definitions/models.HTTPTransferRequest'
       produces:
       - application/json
       responses:
